syntax = "proto3";

package mizer.sequencer;

import "fixtures.proto";

service SequencerRemoteApi {
  rpc SubscribeToSequences (GetSequencesRequest) returns (stream SequencerState) {}
  rpc GoSequence (SequenceGoRequest) returns (Empty) {}
  rpc StopSequence (SequenceStopRequest) returns (Empty) {}
}

message GetSequencesRequest {
}

message Empty {}

message SequencerState {
  repeated SequenceState sequences = 1;
}

message SequenceState {
  uint32 sequence = 1;
  string name = 2;
  bool active = 3;
  double rate = 4;
}

message GetSequenceRequest {
  uint32 sequence = 1;
}

message DeleteSequenceRequest {
  uint32 sequence = 1;
}

message SequenceGoRequest {
  uint32 sequence = 1;
}

message SequenceStopRequest {
  uint32 sequence = 1;
}

message CueTriggerRequest {
  uint32 sequence = 1;
  uint32 cue = 2;
  CueTrigger.Type trigger = 3;
}

message CueTriggerTimeRequest {
  uint32 sequence = 1;
  uint32 cue = 2;
  CueTime time = 3;
}

message CueEffectOffsetTimeRequest {
  uint32 sequence = 1;
  uint32 cue = 2;
  uint32 effect = 3;
  optional double time = 4;
}

message CueNameRequest {
  uint32 sequence = 1;
  uint32 cue = 2;
  string name = 3;
}

message CueValueRequest {
  uint32 sequence_id = 1;
  uint32 cue_id = 2;
  uint32 control_index = 3;
  CueValue value = 4;
}

message CueTimingRequest {
  uint32 sequence_id = 1;
  uint32 cue_id = 2;
  CueTimer time = 3;
}

message SequenceWrapAroundRequest {
  uint32 sequence = 1;
  bool wrap_around = 2;
}

message SequenceStopOnLastCueRequest {
  uint32 sequence = 1;
  bool stop_on_last_cue = 2;
}

message SequencePriorityRequest {
  uint32 sequence = 1;
  FixturePriority priority = 2;
}

message SequenceNameRequest {
  uint32 sequence = 1;
  string name = 2;
}

message AssignSequencePortRequest {
  uint32 sequence = 1;
  uint32 port = 2;
}

message RemoveSequencePortRequest {
  uint32 sequence = 1;
  uint32 port = 2;
}

message SetSequencePortValueRequest {
  uint32 sequence = 1;
  uint32 port = 2;
  uint32 cue = 3;
  double value = 4;
}

message ClearSequencePortValueRequest {
  uint32 sequence = 1;
  uint32 port = 2;
  uint32 cue = 3;
}

message Sequences {
  repeated Sequence sequences = 1;
}

message Sequence {
  uint32 id = 1;
  string name = 2;
  repeated Cue cues = 3;
  repeated mizer.fixtures.FixtureId fixtures = 4;
  repeated uint32 ports = 5;
  bool wrap_around = 6;
  bool stop_on_last_cue = 7;
  FixturePriority priority = 8;
}

message Cue {
  uint32 id = 1;
  string name = 2;
  CueTrigger trigger = 3;
  repeated CueControl controls = 4;
  CueTimings cue_timings = 5;
  CueTimings dimmer_timings = 6;
  CueTimings position_timings = 7;
  CueTimings color_timings = 8;
  repeated CueEffect effects = 9;
  repeated CuePort ports = 10;
}

message CueEffect {
  uint32 effect_id = 1;
  repeated mizer.fixtures.FixtureId fixtures = 2;
  optional double effect_offsets = 3;
  optional double effect_rate = 4;
}

message CuePort {
  uint32 port_id = 1;
  double value = 2;
}

message CueTimings {
  CueTimer fade = 8;
  CueTimer delay = 9;
}

message CueTrigger {
  Type type = 1;
  optional CueTime time = 2;

  enum Type {
    GO = 0;
    FOLLOW = 1;
    TIME = 2;
    BEATS = 3;
    TIMECODE = 4;
  }
}

message CueControl {
  Type type = 1;
  CueValue value = 2;
  repeated mizer.fixtures.FixtureId fixtures = 3;

  enum Type {
    INTENSITY = 0;
    SHUTTER = 1;
    COLOR_RED = 2;
    COLOR_GREEN = 3;
    COLOR_BLUE = 4;
    COLOR_WHEEL = 5;
    PAN = 6;
    TILT = 7;
    FOCUS = 8;
    ZOOM = 9;
    PRISM = 10;
    IRIS = 11;
    FROST = 12;
    GOBO = 13;
    GENERIC = 14;
  }
}

message CueValue {
  oneof value {
    double direct = 3;
    CueValueRange range = 4;
  }
}

message CueTimer {
  bool has_timer = 1;
  oneof timer {
    CueTime direct = 2;
    CueTimerRange range = 3;
  }
}

message CueValueRange {
  double from = 1;
  double to = 2;
}

message CueTime {
  oneof time {
    double seconds = 1;
    double beats = 2;
  }
}

message CueTimerRange {
  CueTime from = 1;
  CueTime to = 2;
}

enum FixturePriority {
  PRIORITY_HTP = 0;
  PRIORITY_LTP_HIGHEST = 1;
  PRIORITY_LTP_HIGH = 2;
  PRIORITY_LTP_NORMAL = 3;
  PRIORITY_LTP_LOW = 4;
  PRIORITY_LTP_LOWEST = 5;
}
